<resources>

    <!--<string name="comment">TechnoFundaResearch</string>-->
    <string name="app_name">TechnoFundaResearch</string>
    <string name="reg">Fill Your Profile</string>
    <string name="add">Advertisement</string>
    <string name="addetials">Advertise Detials</string>
    <string name="myincome">Income</string>
    <string name="incomehistory">Income history</string>
    <string name="directncome">Direct Income</string>
    <string name="ssincome">SS Income</string>
    <string name="binaryincome">Binary Income</string>
    <string name="referralincome">Referral Income</string>
    <string name="ewallet">E-Wallets</string>
    <string name="ewallets">Wallet master</string>
    <string name="ewallet_payment">E-Wallet Payment</string>
    <string name="inewallet">Income Wallet</string>
    <string name="pewallet">Repurchase Ewallet</string>
    <string name="profile">Profile</string>
    <string name="team">Team</string>
    <string name="totalteam">Total Team</string>
    <string name="direct">Direct List</string>
    <string name="mydirect">My Direct</string>
    <string name="refer">Refer to your friend</string>
    <string name="refers">Refer</string>
    <string name="newsupdate">News And Update</string>
    <string name="newsupdatedetials">News And Update Detials</string>
    <string name="nav_item_team">Team Detials</string>
    <string name="nav_item_registration">Registration</string>
    <string name="join_now">Join Now</string>
    <string name="action_settings">Settings</string>
    <string name="recharge">Recharge</string>
    <string name="recharge_list">Recharge history</string>
    <string name="Rs">\u20B9</string>
    <string name="planshow">PlanShow</string>
    <string name="planshow_list">Planshow list</string>
    <string name="planshowotp">OTP</string>
    <string name="plans">Mobile Number</string>
    <string name="choose">Choose Option</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="sms">SMS</string>
    <string name="epay">E-Pay</string>
    <string name="nav_item_logout">LogOut</string>
    <string name="topup_master">Topup master</string>
    <string name="topup">Topup</string>
    <string name="topup_id">Topup Id</string>
    <string name="topup_list">Topup List</string>
    <string name="pin_transfer">Pin Transfer</string>
    <string name="topup_msg">** Here you can only see thouse id that topup by you only **</string>

    <style name="DefaultButtonText">
        <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#979797</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_margin">3dp</item>
        <item name="android:textStyle">normal</item>
        <item name="android:textSize">20sp</item>
        <item name="android:shadowColor">#f9f9f9</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">1</item>
    </style>

    <string name="appwidget_text">EXAMPLE</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="slider_img1">slider</string>
    <string name="slider_img2">slider2</string>
    <string name="slider_img3">slider3</string>
    <string name="title_activity_utility">Utility</string>

</resources>
