<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_frontview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/image4"
    android:orientation="vertical"
    tools:context="com.app.technofunda.ethiqs.frontview">

    <include
        android:id="@+id/footer"
        layout="@layout/footer" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/txtappname"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="22dp"
            android:gravity="center"
            android:text="test"
            android:textColor="#ffff"
            android:textSize="20dp"

            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="65dp"
        android:layout_marginTop="40dp">

        <LinearLayout
            android:id="@+id/container_body"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1.0dip"
                    android:background="#ffb9b9b9" />

                <LinearLayout
                    android:id="@+id/linear"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:orientation="horizontal">

                    <ViewFlipper
                        android:id="@+id/viewflipper"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:autoStart="true"
                        android:flipInterval="1500">

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="match_parent"
                            android:layout_height="200dp"
                            android:contentDescription="@string/slider_img1"
                            android:scaleType="fitXY"
                            android:src="@drawable/slider" />

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="200dp"
                            android:contentDescription="@string/slider_img2"
                            android:scaleType="fitXY"
                            android:src="@drawable/slider2" />

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="200dp"
                            android:contentDescription="@string/slider_img3"
                            android:scaleType="fitXY"
                            android:src="@drawable/slider3" />
                    </ViewFlipper>

                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="3dp"
                    android:background="#ff8533" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <ImageView
                            android:id="@+id/shopping"
                            android:layout_width="78dp"
                            android:layout_height="78dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="25dp"
                            android:padding="5dp"
                            android:src="@drawable/shop" />

                        <TextView
                            android:id="@+id/textreg"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_weight="0.80"
                            android:gravity="center"
                            android:text="Shopping"
                            android:textColor="@color/black" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <ImageView
                            android:id="@+id/referalutility"
                            android:layout_width="80dp"
                            android:layout_height="75dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="30dp"
                            android:src="@drawable/utility_pay" />

                        <TextView
                            android:id="@+id/txtuti"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_weight="0.80"
                            android:gravity="center"
                            android:text="Gallery"
                            android:textColor="@color/black" />

                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:layout_weight="2"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="2dp"
                    android:layout_weight="2"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/selector_xml_name"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <ImageView
                            android:id="@+id/wallet"
                            android:layout_width="80dp"
                            android:layout_height="73dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="30dp"
                            android:src="@drawable/recharge1" />

                        <TextView
                            android:id="@+id/textView15"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_weight="0.80"
                            android:gravity="center"
                            android:text="Marchant Pay"
                            android:textColor="@color/black" />

                    </LinearLayout>

                    <android.support.v7.widget.CardView
                        android:id="@+id/cardTrding"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_margin="10dp"
                        android:layout_weight="0.5"
                        app:cardBackgroundColor="@color/srk_nodisable"
                        app:cardCornerRadius="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:background="@drawable/selector_xml_name"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/img_trend"
                                android:layout_width="80dp"
                                android:layout_height="73dp"
                                android:layout_gravity="center"
                                android:layout_marginTop="30dp"
                                android:src="@drawable/recharge1" />

                            <TextView
                                android:id="@+id/tv_trend"
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:gravity="center"
                                android:text="Trending"
                                android:textColor="@color/white"
                                android:textStyle="bold" />

                        </LinearLayout>
                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:id="@+id/cardRefMaster"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_margin="10dp"
                        android:layout_weight="0.5"
                        app:cardBackgroundColor="@color/srk_nodisable"
                        app:cardCornerRadius="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/selector_xml_name"

                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/rechargereferal"
                                android:layout_width="75dp"
                                android:layout_height="70dp"
                                android:layout_gravity="center"
                                android:layout_marginTop="30dp"
                                android:src="@drawable/iii" />

                            <TextView
                                android:id="@+id/textdirect"
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:gravity="center"
                                android:text="Referal Master"
                                android:textColor="@color/white"
                                android:textStyle="bold" />

                        </LinearLayout>
                    </android.support.v7.widget.CardView>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:layout_weight="2"
                    android:orientation="horizontal">

                    <android.support.v7.widget.CardView
                        android:id="@+id/cardWebsite"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_margin="10dp"
                        android:layout_weight="0.5"
                        app:cardBackgroundColor="@color/srk_nodisable"
                        app:cardCornerRadius="10dp">

                        <LinearLayout

                            android:layout_width="match_parent"
                            android:layout_height="match_parent"

                            android:background="@drawable/selector_xml_name"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:paddingRight="5dp">

                            <ImageView
                                android:id="@+id/website"
                                android:layout_width="75dp"
                                android:layout_height="70dp"
                                android:layout_gravity="center"
                                android:layout_marginTop="25dp"
                                android:src="@drawable/website_img" />

                            <TextView
                                android:id="@+id/textwallet"
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:gravity="center"
                                android:text="Website"
                                android:textColor="@color/white"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:id="@+id/cardLogout"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_margin="10dp"
                        android:layout_weight="0.5"
                        app:cardBackgroundColor="@color/srk_nodisable"
                        app:cardCornerRadius="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:background="@drawable/selector_xml_name"
                            android:orientation="vertical"
                            android:paddingRight="5dp">

                            <ImageView
                                android:id="@+id/logout"
                                android:layout_width="75dp"
                                android:layout_height="70dp"
                                android:layout_gravity="center"
                                android:layout_marginTop="25dp"
                                android:src="@drawable/logout_img" />

                            <TextView
                                android:id="@+id/textworkingwallet"
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:gravity="center"
                                android:text="Logout"
                                android:textColor="@color/white"
                                android:textStyle="bold" />

                        </LinearLayout>
                    </android.support.v7.widget.CardView>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>


